--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -36,3 +36,13 @@ jobs:
           name: cookbook
           path: main.pdf
       
+      - name: Run make4ht
+        uses: docker://ghcr.io/michal-h21/make4ht-action:latest
+        env:
+          command: "make4ht -u -d out main.tex"
+
+      - name: Publish the web pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
