--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -8,22 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  Pages:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Run make4ht
-        uses: docker://ghcr.io/michal-h21/make4ht-action:latest
-        env:
-          command: "make4ht -u -d out main.tex"
-
-      - name: Publish the web pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
-
   PDF:
     runs-on: ubuntu-latest
 
@@ -34,10 +18,16 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: main.tex
+          path: out/cookbook.pdf
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
           name: cookbook
-          path: main.pdf
+          path: out/cookbook.pdf
       
+      - name: Publish to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
